WindGroup Dev/src/objects/LOI_Charge_Template__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_Charge_Type__c</fullName>
        <label>Base Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Base_Charge_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Rent_Calculation__c</fullName>
        <formula>IF 
( 
AND ( 
OR( 
ISPICKVAL ( Charge_Type__c , &quot;Rent&quot;) , 
ISPICKVAL ( Charge_Type__c , &quot;Advance Rental&quot;) ) , 
ISPICKVAL(Type__c, &quot;Fixed&quot;)), 
Charge_Rate__c , 
IF 
( 
AND ( 
OR( 
ISPICKVAL ( Charge_Type__c , &quot;Rent&quot;) , 
ISPICKVAL ( Charge_Type__c , &quot;Advance Rental&quot;) ) , 
ISPICKVAL(Type__c, &quot;By Area&quot;)), 
Charge_Rate__c *  LOI_Unit_Template__r.Area_Sq_Ft__c , 
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Rent Calculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Rent__c</fullName>
        <label>Base Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Value__c</fullName>
        <label>Base Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Base included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Days__c</fullName>
        <label>Billing Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Day</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Rent Schedule Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Billing_Term</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Terms__c</fullName>
        <label>Billing Terms</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Charge_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Billing_Terms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cap_Value__c</fullName>
        <label>Cap Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Amount_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charge Amount Input Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charge_Description__c</fullName>
        <label>Charge Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Charge_Method__c</fullName>
        <formula>TEXT ( Charge__r.Charge_Method__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From Applicable Chare</inlineHelpText>
        <label>Charge Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Operator__c</fullName>
        <label>Charge Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>Highest</fullName>
                </value>
                <value>
                    <fullName>Lowest</fullName>
                </value>
                <value>
                    <fullName>Special Formula</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charge_Rate_Input_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charge Rate Input Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charge_Rate__c</fullName>
        <label>Charge Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Start_Day__c</fullName>
        <description>This field is used to set the billing start day and end date. eg. if we set it as &quot;26&quot;, then billing start date will be 26 and end date will be 25.</description>
        <inlineHelpText>Please set if the billing day is not starting at 1st day of the month. 
eg. set 26 for monthly bill if the billing period between 26 ~ 25.</inlineHelpText>
        <label>Charge Start Day</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Billing_Terms__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Day</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Charge_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicable Charge</label>
        <referenceTo>Applicable_Charges__c</referenceTo>
        <relationshipLabel>LOI Charge Templates</relationshipLabel>
        <relationshipName>LOI_Charge_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commercial_Tax_Apply__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comm Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cumulative_for_each_Tier__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Cumulative we will calculate the Total at each Tier &amp; Summarize them</description>
        <inlineHelpText>If Cumulative we will calculate the Total at each Tier &amp; Summarize them.
Example 
If the Maximum Tier is Tier 2,
If Cumulative:
      Tier 1 Total + Tier 2 Total
If NOT Cumulative:
      Tier 2 Total
      Which</inlineHelpText>
        <label>Cumulative for each Tier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount__c</fullName>
        <formula>IF ( ISPICKVAL( Type__c , &quot;By Area&quot;), (Charge_Rate__c * LOI_Unit_Template__r.Area_Sq_Ft__c) * No_of_Months__c , 
IF ( ISPICKVAL( Type__c , &quot;Fixed&quot;), Charge_Rate__c, 
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** Not in Use **</inlineHelpText>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Term__c</fullName>
        <inlineHelpText>** Not in Use **</inlineHelpText>
        <label>Deposit Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Term</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Month_Formula__c</fullName>
        <label>Due Month Formula</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Due_Month_Formula</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Amount__c</fullName>
        <inlineHelpText>** Not in Use **</inlineHelpText>
        <label>Expected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_GTO_Amount__c</fullName>
        <label>Expected GTO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Accounts_Code__c</fullName>
        <label>Finance Accounts Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Accounts_Desc__c</fullName>
        <label>Finance Accounts Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Month_Pro_rated_Rent__c</fullName>
        <label>First Month Pro-rated Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Formula_Description__c</fullName>
        <label>Formula Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Billing_Frequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GTO_Rate__c</fullName>
        <label>GTO Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Generate_Rent_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Rent Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOI_Unit_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LOI Unit Template</label>
        <referenceTo>LOI_Unit_Template__c</referenceTo>
        <relationshipLabel>LOI Charge Templates</relationshipLabel>
        <relationshipName>LOI_Charge_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Month_Pro_rated_Balance__c</fullName>
        <label>Last Month Pro-rated Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Plan</label>
        <referenceTo>Lease_Plan__c</referenceTo>
        <relationshipLabel>LOI Charge Templates</relationshipLabel>
        <relationshipName>LOI_Charge_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <formula>TEXT (Charge__r.Lease_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_Rental_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Rental Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_of_Parameter__c</fullName>
        <label>Multiple of Parameter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Area</fullName>
                </value>
                <value>
                    <fullName>Meter Units</fullName>
                </value>
                <value>
                    <fullName>Monthly Base Rent</fullName>
                </value>
                <value>
                    <fullName>Monthly GTO</fullName>
                </value>
                <value>
                    <fullName>Phone Units (Local)</fullName>
                </value>
                <value>
                    <fullName>Phone Units (Trunk)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Months__c</fullName>
        <label>No. of Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Name_Text__c</fullName>
        <label>Property Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Short_Code__c</fullName>
        <formula>Charge__r.Property_Short_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Short Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Space_Type_Text__c</fullName>
        <label>Space Type Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Amount__c</fullName>
        <description>This field is used for internal calculation</description>
        <label>Sub Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_1_Rate__c</fullName>
        <description>Please update % in decimal value in this field
e.g. For 10 Percent, add decimal: 0.10
e.g. For 5 Percent, add decimal: 0.05</description>
        <inlineHelpText>Please update % in decimal value in this field 
e.g. For 10 Percent, add decimal: 0.10 
e.g. For 5 Percent, add decimal: 0.05</inlineHelpText>
        <label>Tier 1 Rate</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_1_Upper_Limit__c</fullName>
        <label>Tier 1 Upper Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_2_Rate__c</fullName>
        <inlineHelpText>Please update % in decimal value in this field 
e.g. For 10 Percent, add decimal: 0.10 
e.g. For 5 Percent, add decimal: 0.05</inlineHelpText>
        <label>Tier 2 Rate</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_2_Upper_Limit__c</fullName>
        <label>Tier 2 Upper Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_3_Rate__c</fullName>
        <inlineHelpText>Please update % in decimal value in this field 
e.g. For 10 Percent, add decimal: 0.10 
e.g. For 5 Percent, add decimal: 0.05</inlineHelpText>
        <label>Tier 3 Rate</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_3_Upper_Limit__c</fullName>
        <label>Tier 3 Upper Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tiered_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Tier Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tiered_Lower_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tier Lower Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By Area</fullName>
                </value>
                <value>
                    <fullName>By Percent</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>GTO (Sum)</fullName>
                </value>
                <value>
                    <fullName>GTO (Higher)</fullName>
                </value>
                <value>
                    <fullName>Meter Units</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>LOI Charge Template</label>
    <nameField>
        <label>LOI Charge Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LOI Charge Templates</pluralLabel>
    <recordTypes>
        <fullName>Monthly</fullName>
        <active>true</active>
        <label>Monthly</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rent</fullName>
        <active>true</active>
        <label>Rent</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>